# miniciv

./: .env.example  .gitignore  CLAUDE.md  PRIOR-PROJECT-REPORT-2026-06-24-to-0701.md  README.md  VERSION.txt  hex_prototype.py  hex_viewer.html  out.json  replay_viewer.html
.claude/: settings.local.json
changelog/: v0.4.0.md  v0.5.0.md  v0.7.0.md  v0.8.0.md  v0.8.1.md
coordinator/: README.md  inbox.json
data/: flash_vs_flash.html  flash_vs_flash_map.html  hex_test_replay.json  replay_15x15.html  replay_test.html
docs/: AI-AUDIT.md  AI-EVAL.md  ANALYSIS-DIMENSIONS.md  BUGS.md  DATA-MANAGEMENT.md  DECISIONS.md  DESIGN-PRINCIPLES.md  ENGINEERING.md  GAME.md  HANDOFF-P2.md  HANDOFF.md  INDEX.md  INTEGRATION-TESTS.md  P2-AUDIT.md  UI-PLAN.md  VISION.md  WORKFLOW.md  ai-paradigm-report.md  current-status.md  dev-system-thoughts.md  dev-workflow.md  devplan.md  game-depth-report.md  gdd.md  param-grid-scan.md  report-system.md  rust-architecture.md
eval_aggv3/: aggressive_vs_aggressive.json  aggressive_vs_greedy.json  greedy_vs_aggressive.json  greedy_vs_greedy.json  summary.json
eval_aggv31/: aggressive_vs_aggressive.json  aggressive_vs_greedy.json  greedy_vs_aggressive.json  greedy_vs_greedy.json  summary.json
eval_aggv32/: aggressive_vs_aggressive.json  summary.json  (+3 more)
miniciv-core/: Cargo.toml
miniciv-core/src/: combat.rs  config.rs  constants.rs  economy.rs  eval.rs  game.rs  lib.rs  map.rs  movement.rs  py_bindings.rs  snapshot.rs  tech.rs  unit.rs
miniciv-core/src/ai/: bc.rs  evo.rs  fixed.rs  flatmc.rs  greedy.rs  mod.rs  probes.rs  random.rs  search.rs
(+1020 files in other folders)
